# napkin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  HOOKS.md  LANDING.md  PLAN.md  README.md  index.html  netlify.toml  package.json
.github/: CODEOWNERS
.github/workflows/: release.yml
crates/napkin-cli/: Cargo.toml
crates/napkin-cli/src/: attach.rs  config.rs  main.rs  workspace.rs
crates/napkin-proto/: Cargo.toml
crates/napkin-proto/src/: lib.rs
crates/napkind/: Cargo.toml
crates/napkind/src/: main.rs  osc.rs  session.rs  shim.rs  storage.rs
docs/: config.default.toml
scripts/: bundle-sidecars.sh  install.sh
scripts/homebrew/: napkin.rb
scripts/systemd/: napkind.service
site/: index.html  install
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  config.rs  editor.rs  events.rs  lib.rs  main.rs
src/app/: clipboard.ts  commands.ts  diff-overlay.ts  errors.ts  file-drops.ts  help.ts  history-palette.ts  ipc.ts  keybindings.ts  links.ts  mission-control.ts  notifications.ts  palette.ts  panes.ts  search.ts  tab-colors.ts  tabs.ts  theme.ts  types.ts  workspace.ts
