[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/napkin-proto",
  "crates/napkin-cli",
  "crates/napkind",
]
default-members = ["src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
authors = ["you"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
napkin-proto = { path = "crates/napkin-proto" }
