[package]
name = "napkin"
version = "0.1.0"
description = "napkin — a sick terminal"
authors = ["you"]
edition = "2021"

[lib]
name = "napkin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
