[package]
name = "napkin"
version.workspace = true
edition.workspace = true
description = "napkin — a sick terminal"

[lib]
name = "napkin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
napkin-proto = { workspace = true }
